Solve button alignment issue (#816)
* Solve button alignment issue

* Update _workshop-discussion-events.scss

Fix CSS lint

* Improve responsive styles of online workshop events

Apply top margin only to the buttons rather than every :last-child element.
Enforce consistent layout for content of different lengths across all screen widths by using a column layout with fixed width buttons.

--- a/wp-content/themes/pub/wporg-learn-2020/css/components/_workshop-discussion-events.scss
+++ b/wp-content/themes/pub/wporg-learn-2020/css/components/_workshop-discussion-events.scss
@@ -15,6 +15,12 @@
 		align-items: center;
 		margin-bottom: 1rem;
 
+		@media only screen and (max-width: $breakpoint-tablet) {
+			flex-direction: column;
+			align-items: flex-start;
+			margin-bottom: 2rem;
+		}
+
 		&:last-child {
 			margin-bottom: 0;
 		}
@@ -36,5 +42,10 @@
 	.wp-block-button__link:visited {
 		margin: 0;
 		padding: 0.5rem;
+		white-space: nowrap;
+
+		@media only screen and (max-width: $breakpoint-tablet) {
+			margin-top: 10px;
+		}
 	}
 }
